test/Fail/Issue998e.err
Issue998e.agda:7.3-4: error: [ConstructorDoesNotFitInData]
Constructor c
of sort Set (lsuc ℓ₁)
does not fit into data type of sort Set (lsuc ℓ).
(Reason: Set (lsuc ℓ₁) is not less or equal than Set (lsuc ℓ))
when checking that the type Set ℓ₁ of an argument to the
constructor c fits in the sort Set (lsuc ℓ) of the datatype.
